--- a/.classpath
+++ b/.classpath
@@ -38,6 +38,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/ldh0410/Desktop/새 폴더/khCinema/WebContent/WEB-INF/lib/ojdbc14.jar"/>
+	<classpathentry kind="lib" path="C:/ojdbc14.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
