--- a/.classpath
+++ b/.classpath
@@ -34,7 +34,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Jaewoo/Desktop/학원/lib/ojdbc14.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Jaewoo/Desktop/학원/lib/commons-dbcp-1.4.jar"/>
+	<classpathentry kind="lib" path="C:/ojdbc14.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
